--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
     - name: GitHub Action for Slack
       uses: Ilshidur/action-slack@1.0.1
     - name: docker process
-      users: docker ps
+      uses: docker ps
 
