--- a/.github/workflows/apache-update.yml
+++ b/.github/workflows/apache-update.yml
@@ -19,3 +19,13 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE }}
         port: 22
         script: whoami
+    - name: copy file via ssh key
+      uses: appleboy/scp-action@master
+       env:
+      HOST: 159.89.89.13
+      USERNAME: root
+      PORT: 22
+      KEY: ${{ secrets.SSH_PRIVATE }}
+    with:
+     source: "./index.html"
+     target: "/var/www/html"
