--- a/.github/workflows/apache-update.yml
+++ b/.github/workflows/apache-update.yml
@@ -14,17 +14,17 @@ jobs:
     - name: executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@master
       with:
-        host: 159.89.89.13
-        username: root
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_PRIVATE }}
-        port: 22
+        port: ${{ secrets.PORT }}
         script: whoami
     - name: copy file via ssh key
       uses: appleboy/scp-action@master
       env:
-        HOST: 159.89.89.13
-        USERNAME: root
-        PORT: 22
+        HOST: ${{ secrets.HOST }}
+        USERNAME: ${{ secrets.USER }}
+        PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSH_PRIVATE }}
       with:
         source: "./index.html"
